--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "20.11.30",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "autoprefixer": "10.4.19",
