--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "jsx": "react-jsx",
     "incremental": true,
     "baseUrl": ".",
+    "types": [
+      "vitest/globals",
+      "@testing-library/jest-dom"
+    ],
     "paths": {
       "@/*": [
         "src/*"
