--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "framer-motion": "^11.18.2",
@@ -16,13 +17,20 @@
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
-    "@types/node": "20.11.30",
+    "@types/node": "20.19.0",
     "@types/qrcode": "^1.5.6",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@vitejs/plugin-react": "^4.4.2",
     "autoprefixer": "10.4.19",
+    "jsdom": "^24.1.3",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "vitest": "^2.1.9"
   }
 }
